--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -109,9 +109,9 @@ jobs:
 
       - name: Download add-on kernel for s905x4
         run: |
-          sudo wget -O core/kernel/6.6.66.tar.gz https://drive2.edikurbot.workers.dev/0:/6.6.66.zip
+          sudo wget -O core/kernel/6.6.66.zip https://drive2.edikurbot.workers.dev/0:/6.6.66.zip
           cd core/kernel
-          sudo tar xfz 6.6.66.tar.gz
+          sudo unzip 6.6.66.zip
           cd ../..
           
       - name: Building OpenWrt
