--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -109,12 +109,12 @@ jobs:
 
       - name: Download add-on kernel for s905x4
         run: |
-          sudo mkdir core/kernel/6.6.66
-          sudo wget -O core/kernel/6.6.66/6.6.66.zip https://drive2.edikurbot.workers.dev/0:/6.6.66.zip
-          cd core/kernel/6.6.66
+          sudo mkdir core/kernel
+          sudo wget -O core/kernel/6.6.66.zip https://drive2.edikurbot.workers.dev/0:/6.6.66.zip
+          cd core/kernel
           sudo unzip 6.6.66.zip
           sudo rm 6.6.66.zip
-          cd ../../..
+          cd ../..
           
       - name: Building OpenWrt
         run: |
